--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -2,18 +2,22 @@
 <html xmlns:th="http://www.tymeleaf.org">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-	<link th:href="@{/css/myStyle.css}" rel="stylesheet">
-	<title>Sistema DEVCEASA</title>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+	rel="stylesheet">
+<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+	rel="stylesheet">
+<link th:href="@{/css/myStyle.css}" rel="stylesheet">
+<title>Sistema DEVCEASA</title>
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
 
-	<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
+	<div id="navmenu" th:insert="~{navbar :: menu-principal}"></div>
 
 
 
@@ -23,21 +27,23 @@
 		<br>
 		<div class="meu-hr">
 
-			<p>Cotação de produtos </p>
+			<p>Cotação de produtos</p>
 
 		</div>
 
 		<div th:replace="~{alert}"></div>
 
-		<form th:action="${cotacao.id == null} ? @{/cotacoes/salvar} : @{/cotacoes/editar}" th:object="${cotacao}"
-			method="POST">
+		<form
+			th:action="${cotacao.id == null} ? @{/cotacoes/salvar} : @{/cotacoes/editar}"
+			th:object="${cotacao}" method="POST">
 
 			<div th:replace="~{validacao :: validacao}"></div>
 
 			<div class="form-row">
 				<div class="form-group col-md-8">
-					<label for="propriedade">Produto/Propriedade</label>
-					<select id="propriedade" class="form-control" th:field="*{propriedade}" required>
+					<label for="propriedade">Produto/Propriedade</label> <select
+						id="propriedade" class="form-control" th:field="*{propriedade}"
+						required>
 						<option value="">Selecione...</option>
 						<option th:each="p : ${cotados}" th:value="${p.id}"
 							th:text="${p.produto.nome} + '  - ' + ${p.variedade}  + '  - ' + ${p.subvariedade} + '  - ' + ${p.classificacao} ">
@@ -49,9 +55,10 @@
 
 			<div class="form-row">
 				<div class="form-group col-md-2">
-					<label for="dataDaCotacao">Data da Cotação</label>
-					<input type="date" class="form-control" id="dataDaCotacao" autofocus="autofocus"
-						th:field="*{dataDaCotacao}" placeholder="DataDaCotacao"
+					<label for="dataDaCotacao">Data da Cotação</label> <input
+						type="date" class="form-control" id="dataDaCotacao"
+						autofocus="autofocus" th:field="*{dataDaCotacao}"
+						placeholder="DataDaCotacao"
 						th:classappend="${#fields.hasErrors('dataDaCotacao')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{dataDaCotacao}"></span>
@@ -62,18 +69,20 @@
 			<div class="row">
 
 				<div class="col ">
-					<label for="valor1">Valor cotado(1)</label>
-					<input type="text" class="form-control" id="valor1" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor1}" th:classappend="${#fields.hasErrors('valor1')} ? 'is-invalid'" />
+					<label for="valor1">Valor cotado(1)</label> <input type="text" 
+						class="form-control" id="valor1" 
+						data-mask-reverse="true" th:field="*{valor1}"
+						th:classappend="${#fields.hasErrors('valor1')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
 						<span th:errors="*{valor1}"></span>
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor2">Valor cotado(2)</label>
-					<input type="text" class="form-control" id="valor2" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor2}" th:classappend="${#fields.hasErrors('valor2')} ? 'is-invalid'" />
+					<label for="valor2">Valor cotado(2)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor2" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor2}"
+						th:classappend="${#fields.hasErrors('valor2')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor2}"></span>
 					</div>
@@ -85,18 +94,20 @@
 			<div class="row">
 
 				<div class="col">
-					<label for="valor3">Valor cotado(3)</label>
-					<input type="text" class="form-control" id="valor3" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor3}" th:classappend="${#fields.hasErrors('valor3')} ? 'is-invalid'" />
+					<label for="valor3">Valor cotado(3)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor3" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor3}"
+						th:classappend="${#fields.hasErrors('valor3')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
 						<span th:errors="*{valor3}"></span>
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor4">Valor cotado(4)</label>
-					<input type="text" class="form-control" id="valor4" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor4}" th:classappend="${#fields.hasErrors('valor4')} ? 'is-invalid'" />
+					<label for="valor4">Valor cotado(4)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor4" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor4}"
+						th:classappend="${#fields.hasErrors('valor4')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor4}"></span>
 					</div>
@@ -107,18 +118,20 @@
 			<div class="row">
 
 				<div class="col">
-					<label for="valor5">Valor cotado(5)</label>
-					<input type="text" class="form-control" id="valor5" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor5}" th:classappend="${#fields.hasErrors('valor5')} ? 'is-invalid'" />
+					<label for="valor5">Valor cotado(5)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor5" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor5}"
+						th:classappend="${#fields.hasErrors('valor5')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
 						<span th:errors="*{valor5}"></span>
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor6">Valor cotado(6)</label>
-					<input type="text" class="form-control" id="valor6" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor6}" th:classappend="${#fields.hasErrors('valor6')} ? 'is-invalid'" />
+					<label for="valor6">Valor cotado(6)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor6" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor6}"
+						th:classappend="${#fields.hasErrors('valor6')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor6}"></span>
 					</div>
@@ -129,18 +142,20 @@
 			<div class="row">
 
 				<div class="col">
-					<label for="valor7">Valor cotado(7)</label>
-					<input type="text" class="form-control" id="valor7" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor7}" th:classappend="${#fields.hasErrors('valor7')} ? 'is-invalid'" />
+					<label for="valor7">Valor cotado(7)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor7" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor7}"
+						th:classappend="${#fields.hasErrors('valor7')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
 						<span th:errors="*{valor7}"></span>
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor8">Valor cotado(8)</label>
-					<input type="text" class="form-control" id="valor8" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor8}" th:classappend="${#fields.hasErrors('valor8')} ? 'is-invalid'" />
+					<label for="valor8">Valor cotado(8)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor8" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor8}"
+						th:classappend="${#fields.hasErrors('valor8')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor8}"></span>
 					</div>
@@ -148,18 +163,20 @@
 			</div>
 			<div class="row">
 				<div class="col">
-					<label for="valor9">Valor cotado(9)</label>
-					<input type="text" class="form-control" id="valor9" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor9}" th:classappend="${#fields.hasErrors('valor9')} ? 'is-invalid'" />
+					<label for="valor9">Valor cotado(9)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor9" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor9}"
+						th:classappend="${#fields.hasErrors('valor9')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
 						<span th:errors="*{valor9}"></span>
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor10">Valor cotado(10)</label>
-					<input type="text" class="form-control" id="valor10" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{valor10}" th:classappend="${#fields.hasErrors('valor10')} ? 'is-invalid'" />
+					<label for="valor10">Valor cotado(10)</label> <input type="text" pattern="\d*" 
+						class="form-control" id="valor10" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{valor10}"
+						th:classappend="${#fields.hasErrors('valor10')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor10}"></span>
 					</div>
@@ -168,12 +185,12 @@
 
 			<div class="form-row">
 				<div class="form-group col-md-2">
-					<label for="fatorSazonal">Fator Sazonal</label>
-					<select id="fatorSazonal" class="form-control" th:field="*{fatorSazonal}"
+					<label for="fatorSazonal">Fator Sazonal</label> <select
+						id="fatorSazonal" class="form-control" th:field="*{fatorSazonal}"
 						th:classappend="${#fields.hasErrors('fatorSazonal')} ? 'is-invalid'">
 						<option value="">Selecione...</option>
-						<option th:each="fator : ${fatores}" th:value="${fator}" th:text="${fator.descricao}">Normal
-						</option>
+						<option th:each="fator : ${fatores}" th:value="${fator}"
+							th:text="${fator.descricao}">Normal</option>
 					</select>
 					<div class="invalid-feedback">
 						<span th:errors="*{fatorSazonal}"></span>
@@ -183,96 +200,112 @@
 
 			<div class="row">
 				<div class="col">
-					<label for="precoMinimo">Preco Minimo</label>
-					<input type="text" class="form-control" id="precoMinimo" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{precoMinimo}" th:classappend="${#fields.hasErrors('precoMinimo')} ? 'is-invalid'" />
+					<label for="precoMinimo">Preco Minimo</label> <input type="text"
+						class="form-control" id="precoMinimo" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{precoMinimo}"
+						th:classappend="${#fields.hasErrors('precoMinimo')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMinimo}"></span>
 					</div>
 				</div>
 				<div class="col">
-					<label for="precoMedio">Preco Médio</label>
-					<input type="text" class="form-control" id="precoMedio" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{precoMedio}" th:classappend="${#fields.hasErrors('precoMedio')} ? 'is-invalid'" />
+					<label for="precoMedio">Preco Médio</label> <input type="text"
+						class="form-control" id="precoMedio" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{precoMedio}"
+						th:classappend="${#fields.hasErrors('precoMedio')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMedio}"></span>
 					</div>
 				</div>
-				
+
 				<div class="col">
-					<label for="precoMaximo">Preco Máximo)</label>
-					<input type="text" class="form-control" id="precoMaximo" data-mask="#.##0,00" data-mask-reverse="true"
-						th:field="*{precoMaximo}" th:classappend="${#fields.hasErrors('precoMaximo')} ? 'is-invalid'" />
+					<label for="precoMaximo">Preco Máximo</label> <input type="text"
+						class="form-control" id="precoMaximo" data-mask="#.##0,00"
+						data-mask-reverse="true" th:field="*{precoMaximo}"
+						th:classappend="${#fields.hasErrors('precoMaximo')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMaximo}"></span>
 					</div>
 				</div>
-				
+
 				<div class="col">
 					<br>
-					<button type="button" class="btn btn-primary" onclick="calcularValores()">Calcular Valores</button>
-				</div>	
+					<button type="button" class="btn btn-primary"
+						onclick="calcularValores()">Calcular Valores</button>
+				</div>
+			</div>
+			<div class="row">
+				
+				<div class="col">
+					<br>	
+				<input type="hidden" id="id" th:field="*{id}" />
+				<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+				
+				
+				</div>
 			</div>
 
-
-
-
-
-	</div>
-
-
-
-
-
-	</form>
-
+		</form>
 
 
 	</div>
-<script th:inline="javascript">
-    /*<![CDATA[*/
-    function calcularValores() {
-        var valores = [];
-        for (var i = 1; i <= 10; i++) {
-            var valor = document.getElementById('valor' + i).value;
-            if (valor !== '') {
-                valores.push(parseFloat(valor.replace(',', '.'))); // Converte para número
-            }
-        }
 
-        var precoMinimo = Math.min.apply(null, valores);
-        var precoMaximo = Math.max.apply(null, valores);
-        var precoMedio = valores.reduce(function (acc, val) {
-            return acc + val;
-        }, 0) / valores.length;
-        
-        var fatorSazonalidade = document.getElementById('fatorSazonal').value;
-          // Aplicar o fator de sazonalidade ao preço médio
-        switch (fatorSazonalidade) {
-            case 'MUITOBAIXO':
-                precoMedio *= 0.9; // Redução de 10%
-                break;
-            case 'BAIXO':
-                precoMedio *= 0.95; // Redução de 5%
-                break;
-            case 'NORMAL':
-                // Sem alteração
-                break;
-            case 'ALTO':
-                precoMedio *= 1.05; // Aumento de 5%
-                break;
-            case 'MUITOALTO':
-                precoMedio *= 1.10; // Aumento de 10%
-                break;
-        }
 
-        document.getElementById('precoMinimo').value = precoMinimo.toFixed(2);
-        document.getElementById('precoMaximo').value = precoMaximo.toFixed(2);
-        document.getElementById('precoMedio').value = precoMedio.toFixed(2);
-    }
-    /*]]>*/
-</script>
+
+
+
+
+
+
+
+
+
+	<script th:inline="javascript">
+		/*<![CDATA[*/
+		function calcularValores() {
+			var valores = [];
+			for (var i = 1; i <= 10; i++) {
+				var valor = document.getElementById('valor' + i).value;
+				if (valor !== '') {
+					valores.push(parseFloat(valor.replace(',', '.'))); // Converte para número
+				}
+			}
+
+			var precoMinimo = Math.min.apply(null, valores);
+			var precoMaximo = Math.max.apply(null, valores);
+			var precoMedio = valores.reduce(function(acc, val) {
+				return acc + val;
+			}, 0) / valores.length;
+
+			var fatorSazonalidade = document.getElementById('fatorSazonal').value;
+			// Aplicar o fator de sazonalidade ao preço médio
+			switch (fatorSazonalidade) {
+			case 'MUITOBAIXO':
+				precoMedio *= 0.9; // Redução de 10%
+				break;
+			case 'BAIXO':
+				precoMedio *= 0.95; // Redução de 5%
+				break;
+			case 'NORMAL':
+				// Sem alteração
+				break;
+			case 'ALTO':
+				precoMedio *= 1.05; // Aumento de 5%
+				break;
+			case 'MUITOALTO':
+				precoMedio *= 1.10; // Aumento de 10%
+				break;
+			}
+
+			document.getElementById('precoMinimo').value = precoMinimo
+					.toFixed(2);
+			document.getElementById('precoMaximo').value = precoMaximo
+					.toFixed(2);
+			document.getElementById('precoMedio').value = precoMedio.toFixed(2);
+		}
+		/*]]>*/
+	</script>
 </body>
 
 </html>
