--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -55,13 +55,13 @@
 
 			<div class="form-row">
 				<div class="form-group col-md-2">
-					<label for="dataDaCotacao">Data da Cotação</label> <input
-						type="date" class="form-control" id="dataDaCotacao"
-						autofocus="autofocus" th:field="*{dataDaCotacao}"
-						placeholder="DataDaCotacao"
-						th:classappend="${#fields.hasErrors('dataDaCotacao')} ? 'is-invalid'" />
+					<label for="dataCotacao">Data da Cotação</label> <input
+						type="date" class="form-control" id="dataCotacao"
+						autofocus="autofocus" th:field="*{dataCotacao}"
+						placeholder="DataCotacao"
+						th:classappend="${#fields.hasErrors('dataCotacao')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
-						<span th:errors="*{dataDaCotacao}"></span>
+						<span th:errors="*{dataCotacao}"></span>
 					</div>
 				</div>
 			</div>
@@ -69,9 +69,9 @@
 			<div class="row">
 
 				<div class="col ">
-					<label for="valor1">Valor cotado(1)</label> <input type="text" 
-						class="form-control" id="valor1" 
-						data-mask-reverse="true" th:field="*{valor1}"
+					<label for="valor1">Valor cotado(1)</label> <input type="text"
+						class="form-control" id="valor1" data-mask-reverse="true"
+						th:field="*{valor1}"
 						th:classappend="${#fields.hasErrors('valor1')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -79,10 +79,11 @@
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor2">Valor cotado(2)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor2" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor2}"
+					<label for="valor2">Valor cotado(2)</label> <input type="text"
+						class="form-control" id="valor2" data-mask-reverse="true"
+						th:field="*{valor2}"
 						th:classappend="${#fields.hasErrors('valor2')} ? 'is-invalid'" />
+
 					<div class="invalid-feedback">
 						<span th:errors="*{valor2}"></span>
 					</div>
@@ -94,9 +95,9 @@
 			<div class="row">
 
 				<div class="col">
-					<label for="valor3">Valor cotado(3)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor3" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor3}"
+					<label for="valor3">Valor cotado(3)</label> <input type="text"
+						class="form-control" id="valor3" data-mask-reverse="true"
+						th:field="*{valor3}"
 						th:classappend="${#fields.hasErrors('valor3')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -104,9 +105,9 @@
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor4">Valor cotado(4)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor4" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor4}"
+					<label for="valor4">Valor cotado(4)</label> <input type="text"
+						pattern="\d*" class="form-control" id="valor4"
+						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor4}"
 						th:classappend="${#fields.hasErrors('valor4')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor4}"></span>
@@ -118,9 +119,9 @@
 			<div class="row">
 
 				<div class="col">
-					<label for="valor5">Valor cotado(5)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor5" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor5}"
+					<label for="valor5">Valor cotado(5)</label> <input type="text"
+						pattern="\d*" class="form-control" id="valor5"
+						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor5}"
 						th:classappend="${#fields.hasErrors('valor5')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -128,9 +129,9 @@
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor6">Valor cotado(6)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor6" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor6}"
+					<label for="valor6">Valor cotado(6)</label> <input type="text"
+						pattern="\d*" class="form-control" id="valor6"
+						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor6}"
 						th:classappend="${#fields.hasErrors('valor6')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor6}"></span>
@@ -142,9 +143,9 @@
 			<div class="row">
 
 				<div class="col">
-					<label for="valor7">Valor cotado(7)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor7" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor7}"
+					<label for="valor7">Valor cotado(7)</label> <input type="text"
+						pattern="\d*" class="form-control" id="valor7"
+						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor7}"
 						th:classappend="${#fields.hasErrors('valor7')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -152,9 +153,9 @@
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor8">Valor cotado(8)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor8" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor8}"
+					<label for="valor8">Valor cotado(8)</label> <input type="text"
+						pattern="\d*" class="form-control" id="valor8"
+						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor8}"
 						th:classappend="${#fields.hasErrors('valor8')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor8}"></span>
@@ -163,9 +164,9 @@
 			</div>
 			<div class="row">
 				<div class="col">
-					<label for="valor9">Valor cotado(9)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor9" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor9}"
+					<label for="valor9">Valor cotado(9)</label> <input type="text"
+						pattern="\d*" class="form-control" id="valor9"
+						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor9}"
 						th:classappend="${#fields.hasErrors('valor9')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -173,9 +174,10 @@
 					</div>
 				</div>
 				<div class="col">
-					<label for="valor10">Valor cotado(10)</label> <input type="text" pattern="\d*" 
-						class="form-control" id="valor10" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{valor10}"
+					<label for="valor10">Valor cotado(10)</label> <input type="text"
+						pattern="\d*" class="form-control" id="valor10"
+						data-mask="#.##0,00" data-mask-reverse="true"
+						th:field="*{valor10}"
 						th:classappend="${#fields.hasErrors('valor10')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{valor10}"></span>
@@ -236,13 +238,12 @@
 				</div>
 			</div>
 			<div class="row">
-				
+
 				<div class="col">
-					<br>	
-				<input type="hidden" id="id" th:field="*{id}" />
-				<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-				
-				
+					<br> <input type="hidden" id="id" th:field="*{id}" />
+					<button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+
+
 				</div>
 			</div>
 
@@ -263,15 +264,42 @@
 
 	<script th:inline="javascript">
 		/*<![CDATA[*/
-		function calcularValores() {
-			var valores = [];
-			for (var i = 1; i <= 10; i++) {
-				var valor = document.getElementById('valor' + i).value;
-				if (valor !== '') {
-					valores.push(parseFloat(valor.replace(',', '.'))); // Converte para número
-				}
+
+		function validarNumero(valor, campoId) {
+			var numero = parseFloat(valor.replace(',', '.'));
+
+			if (isNaN(numero)) {
+				
+				alert("Por favor, insira um valor numérico válido no campo "
+						+ campoId + ".");
+				return false;
 			}
 
+			return true;
+		}
+
+		function calcularValores() {
+			
+			var valores = [];
+			var camposValidos = true;
+		
+			 
+			 for (var i = 1; i <= 10; i++) {
+				 
+				 
+				 var campoId = 'valor' + i;
+				  var valor = document.getElementById(campoId).value;
+
+		            if (valor !== '') {
+		                if (!validarNumero(valor, campoId)) {
+		                    camposValidos = false;
+		                    break;
+		                }
+
+		                valores.push(parseFloat(valor.replace(',', '.'))); // Converte para número
+		            }
+		        }
+		 if (camposValidos) {
 			var precoMinimo = Math.min.apply(null, valores);
 			var precoMaximo = Math.max.apply(null, valores);
 			var precoMedio = valores.reduce(function(acc, val) {
@@ -304,6 +332,7 @@
 					.toFixed(2);
 			document.getElementById('precoMedio').value = precoMedio.toFixed(2);
 		}
+		} 
 		/*]]>*/
 	</script>
 </body>
