--- a/src/main/resources/templates/cotacao/cotacao_cadastro.html
+++ b/src/main/resources/templates/cotacao/cotacao_cadastro.html
@@ -13,6 +13,9 @@
 <title>Sistema DEVCEASA</title>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 </head>
 
 <body>
@@ -31,7 +34,6 @@
 
 		</div>
 
-		<div th:replace="~{alert}"></div>
 
 		<form
 			th:action="${cotacao.id == null} ? @{/cotacoes/salvar} : @{/cotacoes/editar}"
@@ -43,7 +45,7 @@
 				<div class="form-group col-md-8">
 					<label for="propriedade">Produto/Propriedade</label> <select
 						id="propriedade" class="form-control" th:field="*{propriedade}"
-						required >
+						required onchange="onProdutoChange()">
 						<option value="">Selecione...</option>
 						<option th:each="p : ${cotados}" th:value="${p.id}"
 							th:text="${p.produto.nome} + '  - ' + ${p.variedade}  + '  - ' + ${p.subvariedade} + '  - ' + ${p.classificacao} ">
@@ -55,35 +57,37 @@
 
 			<div class="form-row">
 				<div class="form-group col-md-2">
-					<label for="dataCotacao">Data da Cotação</label> 
-					
-					<input type="date" class="form-control" id="dataCotacao"
-						autofocus="autofocus" th:field="*{dataCotacao}" value="${dataAtual}"
-						required />
-						
-					<div class="invalid-feedback">
+					<label for="dataCotacao">Data da Cotação</label> <input type="date"
+						class="form-control" id="dataCotacao" autofocus="autofocus"
+						th:field="*{dataCotacao}" value="${dataAtual}" required />
+
+					<div th:if="${#fields.hasErrors('dataCotacao')}"
+						class="alert alert-danger alert-dismissible fade show">
 						<span th:errors="*{dataCotacao}"></span>
+						<button type="button" class="btn-close" data-bs-dismiss="alert"
+							aria-label="Close" onclick="limparCampos()"> </button>
 					</div>
 				</div>
 			</div>
+
 
 			<div class="row">
 
 				<div class="col ">
 					<label for="valor1">Valor cotado(1)</label> <input type="text"
-						class="form-control" id="valor1" data-mask-reverse="true"
-						th:field="*{valor1}" required 
+						class="form-control valor-com-virgula" id="valor1"
+						data-mask-reverse="true" th:field="*{valor1}" required
 						th:classappend="${#fields.hasErrors('valor1')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
 						<span th:errors="*{valor1}"></span>
 					</div>
 				</div>
-				
+
 				<div class="col">
 					<label for="valor2">Valor cotado(2)</label> <input type="text"
-						class="form-control" id="valor2" data-mask-reverse="true"
-						th:field="*{valor2}" required
+						class="form-control valor-com-virgula" id="valor2"
+						data-mask-reverse="true" th:field="*{valor2}" required
 						th:classappend="${#fields.hasErrors('valor2')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -98,8 +102,8 @@
 
 				<div class="col">
 					<label for="valor3">Valor cotado(3)</label> <input type="text"
-						class="form-control" id="valor3" data-mask-reverse="true"
-						th:field="*{valor3}" required 
+						class="form-control valor-com-virgula" id="valor3"
+						data-mask-reverse="true" th:field="*{valor3}" required
 						th:classappend="${#fields.hasErrors('valor3')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -108,7 +112,7 @@
 				</div>
 				<div class="col">
 					<label for="valor4">Valor cotado(4)</label> <input type="text"
-						class="form-control" id="valor4"
+						class="form-control valor-com-virgula" id="valor4"
 						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor4}"
 						th:classappend="${#fields.hasErrors('valor4')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
@@ -122,7 +126,7 @@
 
 				<div class="col">
 					<label for="valor5">Valor cotado(5)</label> <input type="text"
-						class="form-control" id="valor5"
+						class="form-control valor-com-virgula" id="valor5"
 						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor5}"
 						th:classappend="${#fields.hasErrors('valor5')} ? 'is-invalid'" />
 
@@ -132,7 +136,7 @@
 				</div>
 				<div class="col">
 					<label for="valor6">Valor cotado(6)</label> <input type="text"
-						class="form-control" id="valor6"
+						class="form-control valor-com-virgula" id="valor6"
 						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor6}"
 						th:classappend="${#fields.hasErrors('valor6')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
@@ -146,7 +150,7 @@
 
 				<div class="col">
 					<label for="valor7">Valor cotado(7)</label> <input type="text"
-						class="form-control" id="valor7"
+						class="form-control valor-com-virgula" id="valor7"
 						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor7}"
 						th:classappend="${#fields.hasErrors('valor7')} ? 'is-invalid'" />
 
@@ -156,7 +160,7 @@
 				</div>
 				<div class="col">
 					<label for="valor8">Valor cotado(8)</label> <input type="text"
-						class="form-control" id="valor8"
+						class="form-control valor-com-virgula" id="valor8"
 						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor8}"
 						th:classappend="${#fields.hasErrors('valor8')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
@@ -167,7 +171,7 @@
 			<div class="row">
 				<div class="col">
 					<label for="valor9">Valor cotado(9)</label> <input type="text"
-						 class="form-control" id="valor9"
+						class="form-control valor-com-virgula" id="valor9"
 						data-mask="#.##0,00" data-mask-reverse="true" th:field="*{valor9}"
 						th:classappend="${#fields.hasErrors('valor9')} ? 'is-invalid'" />
 
@@ -177,7 +181,7 @@
 				</div>
 				<div class="col">
 					<label for="valor10">Valor cotado(10)</label> <input type="text"
-						 class="form-control" id="valor10"
+						class="form-control valor-com-virgula" id="valor10"
 						data-mask="#.##0,00" data-mask-reverse="true"
 						th:field="*{valor10}"
 						th:classappend="${#fields.hasErrors('valor10')} ? 'is-invalid'" />
@@ -206,7 +210,7 @@
 				<div class="col">
 					<label for="precoMinimo">Preco Minimo</label> <input type="text"
 						class="form-control" id="precoMinimo" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMinimo}" required 
+						data-mask-reverse="true" th:field="*{precoMinimo}" required
 						th:classappend="${#fields.hasErrors('precoMinimo')} ? 'is-invalid'" />
 
 					<div class="invalid-feedback">
@@ -216,7 +220,7 @@
 				<div class="col">
 					<label for="precoMedio">Preco Médio</label> <input type="text"
 						class="form-control" id="precoMedio" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMedio}" required 
+						data-mask-reverse="true" th:field="*{precoMedio}" required
 						th:classappend="${#fields.hasErrors('precoMedio')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMedio}"></span>
@@ -226,7 +230,7 @@
 				<div class="col">
 					<label for="precoMaximo">Preco Máximo</label> <input type="text"
 						class="form-control" id="precoMaximo" data-mask="#.##0,00"
-						data-mask-reverse="true" th:field="*{precoMaximo}" required 
+						data-mask-reverse="true" th:field="*{precoMaximo}" required
 						th:classappend="${#fields.hasErrors('precoMaximo')} ? 'is-invalid'" />
 					<div class="invalid-feedback">
 						<span th:errors="*{precoMaximo}"></span>
@@ -262,7 +266,7 @@
 			var numero = parseFloat(valor.replace(',', '.'));
 
 			if (isNaN(numero)) {
-				
+
 				alert("Por favor, insira um valor numérico válido no campo "
 						+ campoId + ".");
 				return false;
@@ -272,62 +276,87 @@
 		}
 
 		function calcularValores() {
-			
+
 			var valores = [];
 			var camposValidos = true;
-		
-			 
-			 for (var i = 1; i <= 10; i++) {
-				 
-				 
-				 var campoId = 'valor' + i;
-				  var valor = document.getElementById(campoId).value;
 
-		            if (valor !== '') {
-		                if (!validarNumero(valor, campoId)) {
-		                    camposValidos = false;
-		                    break;
-		                }
+			for (var i = 1; i <= 10; i++) {
 
-		                valores.push(parseFloat(valor.replace(',', '.'))); // Converte para número
-		            }
-		        }
-		 if (camposValidos) {
-			var precoMinimo = Math.min.apply(null, valores);
-			var precoMaximo = Math.max.apply(null, valores);
-			var precoMedio = valores.reduce(function(acc, val) {
-				return acc + val;
-			}, 0) / valores.length;
+				var campoId = 'valor' + i;
+				var valor = document.getElementById(campoId).value;
 
-			var fatorSazonalidade = document.getElementById('fatorSazonal').value;
-			// Aplicar o fator de sazonalidade ao preço médio
-			switch (fatorSazonalidade) {
-			case 'MUITOBAIXO':
-				precoMedio *= 0.9; // Redução de 10%
-				break;
-			case 'BAIXO':
-				precoMedio *= 0.95; // Redução de 5%
-				break;
-			case 'NORMAL':
-				// Sem alteração
-				break;
-			case 'ALTO':
-				precoMedio *= 1.05; // Aumento de 5%
-				break;
-			case 'MUITOALTO':
-				precoMedio *= 1.10; // Aumento de 10%
-				break;
+				if (valor !== '') {
+					if (!validarNumero(valor, campoId)) {
+						camposValidos = false;
+						break;
+					}
+
+					valores.push(parseFloat(valor.replace(',', '.'))); // Converte para número
+				}
 			}
+			if (camposValidos) {
+				var precoMinimo = Math.min.apply(null, valores);
+				var precoMaximo = Math.max.apply(null, valores);
+				var precoMedio = valores.reduce(function(acc, val) {
+					return acc + val;
+				}, 0) / valores.length;
 
-			document.getElementById('precoMinimo').value = precoMinimo
-					.toFixed(2);
-			document.getElementById('precoMaximo').value = precoMaximo
-					.toFixed(2);
-			document.getElementById('precoMedio').value = precoMedio.toFixed(2);
+				var fatorSazonalidade = document.getElementById('fatorSazonal').value;
+				// Aplicar o fator de sazonalidade ao preço médio
+				switch (fatorSazonalidade) {
+				case 'MUITOBAIXO':
+					precoMedio *= 0.9; // Redução de 10%
+					break;
+				case 'BAIXO':
+					precoMedio *= 0.95; // Redução de 5%
+					break;
+				case 'NORMAL':
+					// Sem alteração
+					break;
+				case 'ALTO':
+					precoMedio *= 1.05; // Aumento de 5%
+					break;
+				case 'MUITOALTO':
+					precoMedio *= 1.10; // Aumento de 10%
+					break;
+				}
+
+				document.getElementById('precoMinimo').value = precoMinimo
+						.toFixed(2);
+				document.getElementById('precoMaximo').value = precoMaximo
+						.toFixed(2);
+				document.getElementById('precoMedio').value = precoMedio
+						.toFixed(2);
+			}
 		}
-		} 
 		/*]]>*/
 	</script>
+
+	<script th:inline="javascript">
+		/*<![CDATA[*/
+		$(document).ready(function() {
+			// Aplica a máscara para aceitar somente vírgulas em todos os campos de valor
+			$('.valor-com-virgula').mask('#.##0,00', {
+				reverse : true
+			});
+		});
+		/*]]>*/
+	</script>
+	
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    function limparCampos() {
+        // Limpar campos do formulário
+        document.getElementById('cotacaoForm').reset();
+    }
+
+    function onProdutoChange() {
+        limparCampos();
+        // Adicione qualquer lógica adicional que você deseja executar quando o produto for alterado
+    }
+    /*]]>*/
+</script>
+	
 </body>
 
 </html>
